--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "next": "^14.2.12",
+    "next-i18next": "^15.4.0",
     "next-themes": "^0.3.0",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-intl": "^7.0.4",
     "react-wrap-balancer": "^1.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
