--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.344.0",
     "next": "^14.2.12",
     "next-i18next": "^15.4.0",
+    "next-intl": "^3.26.1",
     "next-themes": "^0.3.0",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
